.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:54:43 **** Incremental Build of configuration Debug for project SistemaCPU ****
make all 
Building file: ../src/primitivas/FuncionesAuxiliares.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/primitivas/FuncionesAuxiliares.d" -MT"src/primitivas/FuncionesAuxiliares.d" -o "src/primitivas/FuncionesAuxiliares.o" "../src/primitivas/FuncionesAuxiliares.c"
Finished building: ../src/primitivas/FuncionesAuxiliares.c
 
Building file: ../src/primitivas/PrimitivasFunciones.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/primitivas/PrimitivasFunciones.d" -MT"src/primitivas/PrimitivasFunciones.d" -o "src/primitivas/PrimitivasFunciones.o" "../src/primitivas/PrimitivasFunciones.c"
../src/primitivas/PrimitivasFunciones.c: In function ‘RETORNAR’:
../src/primitivas/PrimitivasFunciones.c:176:2: warning: passing argument 1 of ‘ASIGNAR_VARIABLE’ makes integer from pointer without a cast [enabled by default]
  ASIGNAR_VARIABLE((stackDeFuncion->retVar), variableRetorno);
  ^
../src/primitivas/PrimitivasFunciones.c:65:6: note: expected ‘t_puntero’ but argument is of type ‘struct ReturnVariable *’
 void ASIGNAR_VARIABLE(t_puntero direccion_variable, t_valor_variable valor) {
      ^
../src/primitivas/PrimitivasFunciones.c: In function ‘LLAMAR_CON_RETORNO’:
../src/primitivas/PrimitivasFunciones.c:199:25: warning: assignment makes pointer from integer without a cast [enabled by default]
  stackDeFuncion->retVar = direccionRetorno;
                         ^
Finished building: ../src/primitivas/PrimitivasFunciones.c
 
Building file: ../src/primitivas/Stack.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/primitivas/Stack.d" -MT"src/primitivas/Stack.d" -o "src/primitivas/Stack.o" "../src/primitivas/Stack.c"
../src/primitivas/Stack.c: In function ‘asingar_espacio_memoria_variable’:
../src/primitivas/Stack.c:192:2: warning: implicit declaration of function ‘string_itoa’ [-Wimplicit-function-declaration]
  almacenar_Bytes_de_Pagina(string_itoa(pcb->PID), string_itoa(pagina), string_itoa(byte_inicial), string_itoa(TAMANIO_VARIABLE_D), "    ");
  ^
../src/primitivas/Stack.c:192:2: warning: passing argument 1 of ‘almacenar_Bytes_de_Pagina’ makes pointer from integer without a cast [enabled by default]
In file included from ../src/primitivas/Stack.c:6:0:
../src/primitivas/../interfaz/InterfazMemoria.h:16:7: note: expected ‘char *’ but argument is of type ‘int’
 char* almacenar_Bytes_de_Pagina(char* PID, char* pagina, char* byteInicial, char* longitud, char* texto);
       ^
../src/primitivas/Stack.c:192:2: warning: passing argument 2 of ‘almacenar_Bytes_de_Pagina’ makes pointer from integer without a cast [enabled by default]
  almacenar_Bytes_de_Pagina(string_itoa(pcb->PID), string_itoa(pagina), string_itoa(byte_inicial), string_itoa(TAMANIO_VARIABLE_D), "    ");
  ^
In file included from ../src/primitivas/Stack.c:6:0:
../src/primitivas/../interfaz/InterfazMemoria.h:16:7: note: expected ‘char *’ but argument is of type ‘int’
 char* almacenar_Bytes_de_Pagina(char* PID, char* pagina, char* byteInicial, char* longitud, char* texto);
       ^
../src/primitivas/Stack.c:192:2: warning: passing argument 3 of ‘almacenar_Bytes_de_Pagina’ makes pointer from integer without a cast [enabled by default]
  almacenar_Bytes_de_Pagina(string_itoa(pcb->PID), string_itoa(pagina), string_itoa(byte_inicial), string_itoa(TAMANIO_VARIABLE_D), "    ");
  ^
In file included from ../src/primitivas/Stack.c:6:0:
../src/primitivas/../interfaz/InterfazMemoria.h:16:7: note: expected ‘char *’ but argument is of type ‘int’
 char* almacenar_Bytes_de_Pagina(char* PID, char* pagina, char* byteInicial, char* longitud, char* texto);
       ^
../src/primitivas/Stack.c:192:2: warning: passing argument 4 of ‘almacenar_Bytes_de_Pagina’ makes pointer from integer without a cast [enabled by default]
  almacenar_Bytes_de_Pagina(string_itoa(pcb->PID), string_itoa(pagina), string_itoa(byte_inicial), string_itoa(TAMANIO_VARIABLE_D), "    ");
  ^
In file included from ../src/primitivas/Stack.c:6:0:
../src/primitivas/../interfaz/InterfazMemoria.h:16:7: note: expected ‘char *’ but argument is of type ‘int’
 char* almacenar_Bytes_de_Pagina(char* PID, char* pagina, char* byteInicial, char* longitud, char* texto);
       ^
../src/primitivas/Stack.c: In function ‘obtener_Ultima_variable_declarada’:
../src/primitivas/Stack.c:95:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Finished building: ../src/primitivas/Stack.c
 
Building file: ../src/interfaz/InterfazKernel.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/interfaz/InterfazKernel.d" -MT"src/interfaz/InterfazKernel.d" -o "src/interfaz/InterfazKernel.o" "../src/interfaz/InterfazKernel.c"
../src/interfaz/InterfazKernel.c: In function ‘recibir_PCB_de_kernel’:
../src/interfaz/InterfazKernel.c:28:2: warning: statement with no effect [-Wunused-value]
  for (i; i < list_size(pcb->codigo); i++) {
  ^
../src/interfaz/InterfazKernel.c:42:3: warning: statement with no effect [-Wunused-value]
   for (x; x < list_size(e->argumentos); x++) {
   ^
../src/interfaz/InterfazKernel.c: In function ‘enviar_PCB_a_kernel’:
../src/interfaz/InterfazKernel.c:68:2: warning: passing argument 1 of ‘enviar_dato_serializado’ makes pointer from integer without a cast [enabled by default]
  enviar_dato_serializado(servidor_kernel, modo);
  ^
In file included from ../src/interfaz/InterfazKernel.c:9:0:
../src/interfaz/../general/Socket.h:15:6: note: expected ‘char *’ but argument is of type ‘int’
 void enviar_dato_serializado(char * mensaje, int conexion);
      ^
../src/interfaz/InterfazKernel.c:68:2: warning: passing argument 2 of ‘enviar_dato_serializado’ makes integer from pointer without a cast [enabled by default]
  enviar_dato_serializado(servidor_kernel, modo);
  ^
In file included from ../src/interfaz/InterfazKernel.c:9:0:
../src/interfaz/../general/Socket.h:15:6: note: expected ‘int’ but argument is of type ‘char *’
 void enviar_dato_serializado(char * mensaje, int conexion);
      ^
../src/interfaz/InterfazKernel.c: In function ‘enviar_SYSCALL_solicitar_memoria_dinamica_a_kernel’:
../src/interfaz/InterfazKernel.c:93:9: warning: unused variable ‘PIDR’ [-Wunused-variable]
   char* PIDR = recibir_dato_serializado(servidor_kernel);
         ^
Finished building: ../src/interfaz/InterfazKernel.c
 
Building file: ../src/CPU.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/CPU.d" -MT"src/CPU.d" -o "src/CPU.o" "../src/CPU.c"
../src/CPU.c: In function ‘main’:
../src/CPU.c:57:2: warning: implicit declaration of function ‘close’ [-Wimplicit-function-declaration]
  close(servidor_kernel);
  ^
Finished building: ../src/CPU.c
 
Building target: SistemaCPU
Invoking: GCC C Linker
gcc  -o "SistemaCPU"  ./src/testing/testearPrimitivasFunciones.o ./src/testing/testingPCB.o  ./src/procesador/Ejecucion.o  ./src/primitivas/FuncionesAuxiliares.o ./src/primitivas/IndiceCodigo.o ./src/primitivas/PrimitivasFunciones.o ./src/primitivas/Stack.o  ./src/interfaz/InterfazKernel.o ./src/interfaz/InterfazMemoria.o  ./src/header/AppConfig.o ./src/header/PCB.o  ./src/general/Semaforo.o ./src/general/Socket.o ./src/general/funcionesUtiles.o  ./src/CPU.o   -lparser-ansisop -lpthread -lcommons
Finished building target: SistemaCPU
 
14:34:01 **** Build of configuration Debug for project SistemaCPU ****
make all 
make: No se hace nada para «all».
14:34:02 **** Build of configuration Debug for project SistemaConsola ****
make all 
make: No se hace nada para «all».
14:34:02 **** Build of configuration Debug for project SistemaFILESYSTEM ****
make all 
make: No se hace nada para «all».
14:34:03 **** Build of configuration Debug for project SistemaKERNEL ****
make all 
Building file: ../src/header/AppConfig.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/header/AppConfig.d" -MT"src/header/AppConfig.d" -o "src/header/AppConfig.o" "../src/header/AppConfig.c"
../src/header/AppConfig.c: In function ‘inicializar_configuracion’:
../src/header/AppConfig.c:95:1: error: expected expression before ‘<<’ token
 <<<<<<< HEAD
 ^
../src/header/AppConfig.c:100:1: error: expected expression before ‘==’ token
 =======
 ^
../src/header/AppConfig.c:103:1: error: expected expression before ‘>>’ token
 >>>>>>> 947eb90b9b6dfbe642144eddb24a9cd741fa75a3
 ^
../src/header/AppConfig.c:103:9: error: exponent has no digits
 >>>>>>> 947eb90b9b6dfbe642144eddb24a9cd741fa75a3
         ^
../src/header/AppConfig.c: In function ‘inicializar_vec_variables_compartidas’:
../src/header/AppConfig.c:115:1: error: expected expression before ‘<<’ token
 <<<<<<< HEAD
 ^
../src/header/AppConfig.c:118:9: error: exponent has no digits
 >>>>>>> 947eb90b9b6dfbe642144eddb24a9cd741fa75a3
         ^
../src/header/AppConfig.c:120:10: error: ‘i’ undeclared (first use in this function)
  while ( i < configuraciones.cantidad_var_comp) {
          ^
../src/header/AppConfig.c:120:10: note: each undeclared identifier is reported only once for each function it appears in
../src/header/AppConfig.c: In function ‘inicializar_dict_semaforos_ansisop’:
../src/header/AppConfig.c:130:3: warning: passing argument 3 of ‘dictionary_put’ makes pointer from integer without a cast [enabled by default]
   dictionary_put(dict_semaforos_ansisop, configuraciones.SEM_IDS[i], atoi(configuraciones.SEM_INIT[i]));
   ^
In file included from ../src/header/AppConfig.h:11:0,
                 from ../src/header/AppConfig.c:12:
/usr/include/commons/collections/dictionary.h:42:11: note: expected ‘void *’ but argument is of type ‘int’
  void     dictionary_put(t_dictionary *, char *key, void *data);
           ^
make: *** [src/header/AppConfig.o] Error 1
14:34:05 **** Build of configuration Debug for project SistemaMEMORIA ****
make all 
make: No se hace nada para «all».
